# fheli-blog

./: .eslintignore  .eslintrc.js  .gitignore  AegisFace_Complete_Specification.txt  FHELI_ Sovereign Edge Biometrics & Liveness System.pptx  Fheli_Complete_Specification.txt  PROJECT.md  README.md  app.json  index.html  jest.config.js  metro.config.js  package-lock.json  package.json  script.js  style.css  tsconfig.json
android/: build.gradle  gradle.properties  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/nhai/datalake/biometrics/: FheliEngineModule.java  FheliEnginePackage.java  MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  FheliEngineCPP.cpp  FheliEngineCPP.h  fheli_jni.cpp
android/app/src/main/res/values/: strings.xml
docs/: Innovation_and_Full_Solution.md  Integration_Guide.md  Patent_Specification.md  Presentation.md  TechDoc.md
ios/: FheliEngineBridge.m  FheliEngineBridge.swift  FheliEngineObjectiveC.h  FheliEngineObjectiveC.mm
server/: datalake_ledger.db  datalake_ledger.db-journal  fieldid_registry.db-journal  package-lock.json  package.json  server.js
server/data/: demo_personnel.json  fieldid_registry_live.db-journal
server/public/: app.js  index.html  style.css
shims/: empty-module.js
src/: App.tsx  config.ts
src/components/: CameraView.tsx  LivenessOverlay.tsx
src/database/: DBManager.ts  SyncQueue.ts
src/native/: FaceEngine.ts  FheliEngine.ts  FieldIDEngine.ts
src/utils/: ZKProver.ts  liveness.ts  math.test.ts  math.ts
